--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /.metadata/
+sp04_FruitCart/target/m2e-wtp/web-resources/META-INF/maven/com.encore/spring/pom.properties
+sp01_SpringMVC/target/m2e-wtp/web-resources/META-INF/maven/com.encore/spring/pom.properties
+sp02_SpringMVC/target/m2e-wtp/web-resources/META-INF/maven/com.encore/spring/pom.properties
+sp03_SpringMVC/target/m2e-wtp/web-resources/META-INF/maven/com.encore/spring/pom.properties
